<resources>
    <string name="app_name">NFC-Access</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="navigation_drawer_user">Añadir nuevo usuario</string>
    <string name="navigation_drawer_money">Añadir creditos</string>
    <string name="navigation_drawer_pay">Realizar pago</string>
    <string name="navigation_drawer_about">Acerca de nosotros</string>

    <string name="action_settings">Ajustes</string>

    <string name="title_activity_splash">SplashActivity</string>

    <!-- Hints for Add new User form-->

    <string name="new_user_form_name_hint">Nombre</string>
    <string name="new_user_form_lastname_hint">Apellidos</string>
    <string name="new_user_form_DNI_hint">DNI</string>
    <string name="new_user_form_accesslevel_hint">Nivel de acceso</string>

            <!--Tamaños BBDD para los inputs -->
    <string name="new_user_form_name_length">50</string>
    <string name="new_user_form_lastname_length">100</string>
    <string name="new_user_form_DNI_length">10</string>
    <string name="new_user_form_accesslevel_length">1</string>

    <string name="componentes_del_grupo">Componentes del grupo:</string>
    <string name="ignacio_dominguez">Ignacio Dominguez</string>
    <string name="florin_tataru">Florin Tataru</string>
    <string name="juan_manuel_vicente">Juan Manuel Vicente</string>
    <string name="javier_fernandez">Javier Fernandez</string>
    <string name="ionut_daniel_motofelea">Ionut Daniel Motofelea</string>

    <string name="message_write_error">¡Error grabando tarjeta!</string>
    <string name="message_write_success">¡Tarjeta grabada correctamente!</string>
    <string name="message_write_progress">Grabando tarjeta…</string>
    <string name="message_tag_detected">¡Tarjeta detectada!</string>
    <string name="message_write_tag">Grabar datos en la tarjeta</string>
    <string name="message_tap_tag">Aproxime la tarjeta al dispositivo</string>

    <string name="message_read_tag">Leer datos de la tarjeta</string>
    <string name="message_read_error">¡Error leyendo tarjeta!</string>
    <string name="message_read_success">¡Tarjeta leida correctamente!</string>

    <string name="add_money_form_money_hint">Creditos actuales</string>
    <string name="add_money_form_add_money_hint">Creditos a añadir</string>

    <string name="payment_money_hint">Creditos actuales</string>
    <string name="payment_remove_money_hint">Creditos a pagar</string>

    <string name="serverhost">http://192.168.0.113:5000</string>

    <string name="creditos_añadidos_correctamente">Creditos añadidos correctamente</string>
    <string name="creditos_pagados_correctamente">Pago realizado correctamente</string>
    <string name="creditos_insuficientes">"Creditos insuficientes"</string>

</resources>
