<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_new_user"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/navigation_drawer_user" />
        <item
            android:id="@+id/drawer_add_money"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/navigation_drawer_money" />
        <item
            android:id="@+id/drawer_do_payment"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/navigation_drawer_pay" />
        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/navigation_drawer_about" />
    </group>

</menu>
