<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.grupo1.nfc_access.fragments.NewUserFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_user_coordinator_layout"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:id="@+id/form_layout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="@string/new_user_form_name_length">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/new_user_form_name_hint"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:maxLength="@string/new_user_form_name_length"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:drawablePadding="10dp"
            android:id="@+id/lastnameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="@string/new_user_form_lastname_length">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/new_user_form_lastname_hint"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:maxLength="@string/new_user_form_lastname_length" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/DNIWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="@string/new_user_form_DNI_length">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/DNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/new_user_form_DNI_hint"
                android:drawableStart="@drawable/ic_assignment_ind_black_24dp"
                android:drawablePadding="10dp"
                android:maxLength="@string/new_user_form_DNI_length"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/accessLevelWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="@string/new_user_form_accesslevel_length">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/accessLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/new_user_form_accesslevel_hint"
                android:drawableStart="@drawable/ic_security_black_24dp"
                android:drawablePadding="10dp"
                android:maxLength="@string/new_user_form_accesslevel_length"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check_black_24dp"
        app:layout_anchor="@id/form_layout"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
