<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.grupo1.nfc_access.fragments.NewUserFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_user_coordinator_layout"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:id="@+id/form_layout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/new_user_form_name_hint"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:maxLength="@string/new_user_form_name_length"
                android:enabled="false"
                android:focusable="false"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:drawablePadding="10dp"
            android:id="@+id/lastnameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/new_user_form_lastname_hint"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:maxLength="@string/new_user_form_lastname_length"
                android:enabled="false"
                android:focusable="false"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/DNIWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/DNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/new_user_form_DNI_hint"
                android:drawableStart="@drawable/ic_assignment_ind_black_24dp"
                android:drawablePadding="10dp"
                android:maxLength="@string/new_user_form_DNI_length"
                android:enabled="false"
                android:focusable="false"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/moneyWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/add_money_form_money_hint"
                android:drawableStart="@drawable/ic_monetization_on_black_24dp"
                android:drawablePadding="10dp"
                android:maxLength="@string/new_user_form_accesslevel_length"
                android:enabled="false"
                android:focusable="false"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="30dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_remove_white_24dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addMoneyWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_less"
                android:layout_toLeftOf="@+id/btn_more">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/addMoney"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/add_money_form_add_money_hint"
                    android:drawableStart="@drawable/ic_euro_symbol_black_24dp"
                    android:drawablePadding="10dp"
                    android:textSize="30dp"
                    android:maxLength="3" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_add_white_24dp"/>

        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check_white_24dp"
        app:layout_anchor="@id/form_layout"
        app:layout_anchorGravity="bottom|right|end" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_nfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_nfc_white_24dp"
        app:layout_anchor="@id/form_layout"
        app:layout_anchorGravity="bottom|left|end" />

</android.support.design.widget.CoordinatorLayout>
