<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context="org.grupo1.nfc_access.fragments.NewUserFragment">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/splash_screen_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:paddingTop="15dp"
            android:textColor="#fff"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="25dp"
            />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/ic_nfc_color_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/colorPrimaryLight"
            android:divider="@drawable/layout_divider"
            android:showDividers="middle">
            <TextView
                android:id="@+id/fragment_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@color/colorPrimary"
                android:textColor="#fff"
                android:text="@string/componentes_del_grupo"
                android:textStyle="bold"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/fragment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="#fff"
                android:textSize="20dp"
                android:text="@string/ignacio_dominguez" />
            <TextView
                android:id="@+id/fragment_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="#fff"
                android:textSize="20dp"
                android:text="@string/florin_tataru" />
            <TextView
                android:id="@+id/fragment_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="#fff"
                android:textSize="20dp"
                android:text="@string/juan_manuel_vicente" />
            <TextView
                android:id="@+id/fragment_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="#fff"
                android:textSize="20dp"
                android:text="@string/javier_fernandez" />
            <TextView
                android:id="@+id/fragment_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="#fff"
                android:textSize="20dp"
                android:text="@string/ionut_daniel_motofelea" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/colorPrimaryLight"
            android:divider="@drawable/layout_divider"
            android:showDividers="middle">
            <TextView
                android:id="@+id/fragment_text_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#fff"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@color/colorPrimary"
                android:text="Proyecto:"
                android:textStyle="bold"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/fragment_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="#fff"
                android:textSize="15dp"
                android:text="Sistemas Basados en computadores 2017/18" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>